feat(timeline): Add mutex pairing visualization and hover-to-trace
This change introduces a major new feature to the timeline visualization
to make it easier to trace the lifecycle of mutexes.

- **Mutex Pairing:** The backend now identifies `mutex_create` and
  `mutex_unlock` pairs and returns this information to the frontend.
- **Hover-to-Trace:** When hovering over an event on the timeline, all
  unrelated events are now faded out, and an arrow is drawn connecting
  the corresponding `mutex_create` and `mutex_unlock` events. This makes
  it easy to see the duration and participants of a specific mutex lock.
- **UI/UX Improvements:**
    - A favicon has been added.
    - The `match_name` regex in the configuration has been improved to
      better identify job roles.
    - Minor CSS adjustments have been made to support the new
      visualization features.

--- a/config.yaml
+++ b/config.yaml
@@ -15,7 +15,7 @@ autoinst_parser:
           finished (?P<module>\S+) \S+ (runtime: \d+ s)
   - name: multimachine
     match_name: |-
-      .*(?P<name>support_?server|\d?nodes?_?\d+).*
+      .*(?P<name>support_?server|\d?nodes?_?\d+|qnetd_server).*
     channels:
       - name: "error_mutex_lock_owner_finished"
         type: "error"
