refactor(backend): Modularize application logic and add tests
This commit introduces a major refactoring of the backend to improve
modularity, maintainability, and testability.

- **Modularization:**
    - The core application logic has been split from `app/main.py` into
      dedicated modules:
        - `app/__init__.py`: Handles configuration loading and app
          initialization.
        - `app/client.py`: A new wrapper class (`OpenQAClientWrapper`)
          encapsulates all interactions with the `openqa-client`.
        - `app/autoinst_parser.py`: Contains the log parsing logic.
    - This separation of concerns makes the code cleaner and easier to
      understand.

- **Improved Configuration Handling:**
    - The configuration loading in `app/__init__.py` is now more robust.
    - It performs strict validation on the `config.yaml` file, checking
      for missing fields and valid regular expressions (including the
      required `(?P<name>...)` group in `match_name`).
    - The application will exit on startup if the configuration is
      invalid, preventing runtime errors.

- **Mutex Pairing Logic:**
    - A new `find_mutex_pairs` function has been added to `app/main.py` to
      identify `mutex_create` and `mutex_unlock` event pairs. This
      enables the new timeline visualization feature.

- **Comprehensive Test Suite:**
    - A full suite of backend tests using `pytest` has been added in the
      `tests/backend/` directory.
    - The tests cover the new modules (`client`, `autoinst_parser`,
      `__init__`) and the core logic in `main`, ensuring the refactoring
      is sound and future changes can be made safely.
    - `pyproject.toml` has been updated to include `pytest` as a
      development dependency.

--- a/config.yaml
+++ b/config.yaml
@@ -2,7 +2,7 @@ config_ver: 2
 autoinst_parser:
   - name: SAPHanaSR
     match_name: |-
-      .*SAPHanaSR-ScaleUp-PerfOpt.*
+      .*(?P<name>SAPHanaSR-ScaleUp-PerfOpt).*
     channels:
       - name: "module_start"
         type: "module"
