fix(frontend): Correctly render exception details and log entries
This commit addresses two bugs in the frontend rendering logic that caused test failures.

The first bug was in the `renderJobDetails` function, which was incorrectly overwriting pre-parsed exception details with summary information from the autoinst-log. This has been corrected to preserve the detailed exception messages when they are available.

The second bug was in the `_createCollapsibleSection` function, where a premature `return` statement prevented a CSS class from being applied to exception entries in the log table. This has been fixed to ensure consistent styling.

Additionally, this commit includes minor improvements to the frontend test setup:
- The `test` script in `package.json` has been updated to use `vitest run` for single-run test execution.
- An explicit `not.toBeNull()` assertion has been added to `renderer.test.js` to make the test more robust.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "description": "A web-based tool to analyze and visualize logs from multiple, related openQA jobs.",
   "scripts": {
-    "test": "vitest"
+    "test": "vitest run"
   },
   "devDependencies": {
     "jsdom": "^24.1.0",
